namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: colors
  labels:
      istio-injection: enabled
