deployment.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: console
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: color-deployment
spec:
  replicas: 10
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: color-app
  template:
    metadata:
      labels:
        app: color-app
    spec:
      containers:
        - image: bedis9/colors
          imagePullPolicy: IfNotPresent
          name: color-app-server
          ports:
            - containerPort: 8080
      terminationGracePeriodSeconds: 30
  #paused: false
  strategy:
#    blueGreen:
#      activeService: color-app-active
#      previewService: color-app-preview
#      autoPromotionEnabled: false
#      scaleDownDelaySeconds: 120
#      previewReplicaCount: 1
    canary:
      stableService: color-app-active
      canaryService: color-app-preview
      maxSurge: '25%'
      maxUnavailable: 0
      # Next test if to add analysis to have more tests
      steps:
        - pause: {} # pause before start
        - setWeight: 1 # Only add a pod for tests, not traffic
        - pause: {} # Pause during first tests
        - setCanaryScale:
            matchTrafficWeight: true
        - setCanaryScale:
            weight: 10
        - pause:
            duration: 2m
        - setCanaryScale:
            weight: 20
        - pause:
            duration: 2m
        - setCanaryScale:
            weight: 40
        - pause: {} # pause indefinitely
        - setCanaryScale:
            weight: 60
        - pause:
            duration: 2m
        - setCanaryScale:
            weight: 80
        - pause:
            duration: 2m
        - setCanaryScale:
            weight: 100

---
apiVersion: v1
kind: Service
metadata:
  name: color-app-active
  namespace: colors
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: color-app

---
apiVersion: v1
kind: Service
metadata:
  name: color-app-preview
  namespace: colors
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: color-app

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: color-app-vs
  namespace: colors
spec:
  hosts:
  # - color-app.test.com
  - "*"
  gateways:
  - color-app-gateway
  http:
    - name: "color-app-vs-test"
      route:
        - destination:
            host: color-app-preview.colors.svc.cluster.local
            port:
              number: 80
      match:
        - headers:
            end-user:
              exact: "test"

    - name: "color-app-vs"
      route:
        - destination:
            host: color-app-active.colors.svc.cluster.local

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: color-app-gateway
  namespace: colors
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      # - "color-app.test.com"
      - "*"
