deployment_simple.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: console
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: color-deployment
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: color-app
  template:
    metadata:
      labels:
        app: color-app
    spec:
      containers:
        - name: color-app
          image: argoproj/rollouts-demo:blue
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      # activeService specifies the service to update with the new template hash at time of promotion.
      # This field is mandatory for the blueGreen update strategy.
      activeService: rollout-bluegreen-active
      # previewService specifies the service to update with the new template hash before promotion.
      # This allows the preview stack to be reachable without serving production traffic.
      # This field is optional.
      previewService: rollout-bluegreen-preview
      # autoPromotionEnabled disables automated promotion of the new stack by pausing the rollout
      # immediately before the promotion. If omitted, the default behavior is to promote the new
      # stack as soon as the ReplicaSet are completely ready/available.
      # Rollouts can be resumed using: `kubectl argo rollouts promote ROLLOUT`
      autoPromotionEnabled: false

#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  labels:
#    app: color-app
#  name: color-app
#  namespace: colors
#spec:
#  progressDeadlineSeconds: 600
#  replicas: 5
#  minReadySeconds: 20 # Allow to wait for at least 20s before deploying the next pod
#  revisionHistoryLimit: 10
#  selector:
#    matchLabels:
#      app: color-app
#  strategy:
#    # type: Recreate
#    type: RollingUpdate
#    rollingUpdate:
#      maxSurge: 1
#      maxUnavailable: 0
#  template:
#    metadata:
#      creationTimestamp: null
#      labels:
#        app: color-app
#        version: v1
#    spec:
#      containers:
#      - image: bedis9/colors
#        imagePullPolicy: IfNotPresent
#        name: color-app-server
#        env:
#        - name: COLOR
#          value: green
#        ports:
#        - containerPort: 8080
#      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: color-app-service
  namespace: colors
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: color-app
    version: v1

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: color-app-vs
  namespace: colors
spec:
  hosts:
  # - color-app.test.com
  - "*"
  gateways:
  - color-app-gateway
  http:
  - name: "color-app-vs"
    route:
      - destination:
          host: color-app-service.colors.svc.cluster.local
          port:
            number: 80

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: color-app-gateway
  namespace: colors
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
      # - "color-app.test.com"
      - "*"
